# statistics_harness

./: .gitignore  .pre-commit-config.yaml  1-32-2026-recommendations-plan.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CROSS_DOMAIN_PLUGIN_IMPLEMENTATION_GUIDE.md  DAAF_ANALYSIS_FOR_HARNESS.md  KONA_3D_SOM_IMPLEMENTATION.md  KONA_NOVELTY_ANALYSIS.md  Makefile  PLUGIN_IMPLEMENTATION_GUIDE.md  README.md  REPO_TOC.md  close-cycle-third-server-impact-plan.md  codex-plugins-unimplemented-plan.md  codex_kona_route_updates.md  conftest.py  everything-not-fully-implemented-plan.md  g  intelligent-plugin-orchestrator-two-lanes-plan.md  leftfield-top20-methods-implementation-plan.md  modeled-improvement-general-close-qemail-removal-plan.md  package-lock.json  package.json  parallel-plugin-orchestrator-plan.md  pyproject.toml  pytest.ini  queue-delay-plugins-evaluation-plan.md  r  repomix-output.md  s  shell-lint-ps-wsl  stat-redteam2-6-26-plan.md  statistics-harness-next30b-ranked-work-order-plan.md  statistics-repo-update-recommendations-plan.md  topo-tda-addon-pack-plan.md  two-million-rows-support-plan.md  w
.claude/: settings.local.json
.codex/: STATE.md
codex/: PROJECT_SPEC.md
config/: actionability_thresholds.yaml  app.yaml  chunk_invariance_tolerances.yaml  plugin_kind_map.yaml  plugin_test_coverage_exemptions.json  recommendation_weights.yaml  reporting.yaml  storage_retention.yaml
docs/: 4_pillars_scoring_spec.md  _codex_plugin_catalog.md  _codex_repo_manifest.txt  accounting-month-global-windows-golden-implementation-plan.md  agent_execution_contract.md  evaluation.md  (+97 more)
(+2305 files in other folders)
